General project update

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ Temporary Items
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
 bower_components
+apex/scripts
