another huge chunk of work for bootstrap 4, mostly around navigation

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "url": "git://github.com/vincentmorneau/apex-bootstrap4.git"
   },
   "dependencies": {
-    "bootstrap": "4.0.0"
+    "bootstrap": "4.0.0",
+    "knockout-pre-rendered": "^0.9.1"
   }
 }
